# terminal-3d-graphics-engine

./: .gitignore  CMakeLists.txt  README.md  main.cpp
control/: control.cpp  control.h
loader/: loader.cpp  loader.h
math/: Mat4.cpp  Mat4.h  Vec2.cpp  Vec2.h  Vec3.cpp  Vec3.h  Vec4.cpp  Vec4.h  quickSQRT.cpp  quickSQRT.h
renderer/: renderer.cpp  renderer.h
scene/: camera.cpp  camera.h  scene.cpp  scene.h
shapes/: ellipsoid.cpp  ellipsoid.h  parallelepiped.cpp  parallelepiped.h  shape.cpp  shape.h  sphere.cpp  sphere.h
